welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:3: error: value min is not a member of Boolean
		if ( min(a,c)==a && max(a,c)==c min(a,b)==a && min(b,c)==b){
                                                ^